added elevation data

--- a/src/data_process.ipynb
+++ b/src/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -52,15 +52,26 @@
     "# import given data\n",
     "date_parser = lambda x: datetime.strptime(x, \"%Y-%m-%d\")\n",
     "\n",
-    "train = pd.read_csv('../input/train.csv', parse_dates=['Date'], date_parser=date_parser)[['Date', 'Address', 'Species', 'Block', 'Street', 'Trap', 'AddressNumberAndStreet', 'Latitude', 'Longitude', 'AddressAccuracy', 'NumMosquitos', 'WnvPresent']]\n",
-    "test = pd.read_csv('../input/test.csv',  parse_dates=['Date'], date_parser=date_parser)[['Id', 'Date', 'Address', 'Species', 'Block', 'Street', 'Trap', 'AddressNumberAndStreet', 'Latitude', 'Longitude', 'AddressAccuracy']]\n",
+    "train = pd.read_csv('../input/train.csv', dtype=str, parse_dates=['Date'], date_parser=date_parser)[['Date', 'Address', 'Species', 'Block', 'Street', 'Trap', 'AddressNumberAndStreet', 'Latitude', 'Longitude', 'AddressAccuracy', 'NumMosquitos', 'WnvPresent']]\n",
+    "test = pd.read_csv('../input/test.csv', dtype=str, parse_dates=['Date'], date_parser=date_parser)[['Id', 'Date', 'Address', 'Species', 'Block', 'Street', 'Trap', 'AddressNumberAndStreet', 'Latitude', 'Longitude', 'AddressAccuracy']]\n",
     "\n",
-    "weather = pd.read_csv('../input/weather.csv', index_col=1, parse_dates=['Date'], date_parser=date_parser)[['Station', 'Tmax', 'Tmin', 'Tavg', 'Depart', 'DewPoint', 'WetBulb', 'Heat', 'Cool', 'Depth', 'Water1', 'SnowFall', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']]"
+    "weather = pd.read_csv('../input/weather.csv', index_col=1, parse_dates=['Date'], date_parser=date_parser)[['Station', 'Tmax', 'Tmin', 'Tavg', 'DewPoint', 'WetBulb', 'Cool', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']]\n",
+    "\n",
+    "elevation = pd.read_csv('../input/elevation.csv', dtype=str, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -90,12 +101,16 @@
     "weather_merged = pd.merge(weather[weather.Station == 1], weather[weather.Station == 2], left_index=True, right_index=True, suffixes=['_1', '_2'])\n",
     "weather_merged.drop(weather_merged.filter(regex='Station').columns, axis=1, inplace=True)\n",
     "\n",
-    "# add merged weather"
+    "# add weather by days\n",
+    "days = [0, 1, 3, 7, 14]\n",
+    "weather_days = pd.DataFrame(index=weather_merged.index)\n",
+    "for i in days:\n",
+    "    weather_days = pd.merge(weather_days, weather_merged.shift(i), left_index=True, right_index=True, suffixes=['', '_d' + str(i)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -108,12 +123,18 @@
     "usgs_df['USGS05536118'] = usgs_05536118['01_00065_00003']\n",
     "usgs_df['USGS05536121'] = usgs_05536121['02_00065_00003']\n",
     "usgs_df['USGS05536123'] = usgs_05536123['35_00065_00003']\n",
-    "usgs_df.fillna(0, inplace=True)"
+    "usgs_df.fillna(0, inplace=True)\n",
+    "\n",
+    "# add usgs data by days\n",
+    "days = [0, 1, 3, 7, 14]\n",
+    "usgs_days = pd.DataFrame(index=weather_merged.index)\n",
+    "for i in days:\n",
+    "    usgs_days = pd.merge(usgs_days, usgs_df.shift(i), left_index=True, right_index=True, suffixes=['', '_d' + str(i)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +147,7 @@
     "city = a[city_name]\n",
     "\n",
     "#astral_df = pd.DataFrame(index=weather_merged.index, columns=['MoonPhase', 'Dawn', 'Sunrise', 'Noon', 'Sunset', 'Dusk'])\n",
-    "astral_df = pd.DataFrame(index=weather_merged.index, columns=['MoonPhase', 'Sunrise', 'Sunset',])\n",
+    "astral_df = pd.DataFrame(index=weather_merged.index, columns=['MoonPhase', 'Sunrise', 'Sunset'])\n",
     "for date in astral_df.index:\n",
     "    sun = city.sun(date=date, local=True)\n",
     "    #dawn = (sun['dawn'] - city.tz.localize(date)).total_seconds()/3600.0\n",
@@ -140,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10506, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +233,7 @@
     "    x['DayOfYear'] = data.Date.apply(lambda x: x.timetuple().tm_yday)\n",
     "    \n",
     "    # add location\n",
-    "    #x[['Latitude', 'Longitude']] = data[['Latitude', 'Longitude']]\n",
+    "    x[['Latitude', 'Longitude']] = data[['Latitude', 'Longitude']]\n",
     "    #x['AddressAccuracy'] = data['AddressAccuracy']\n",
     "    #x['Trap'] = trap_le.transform(data['Trap'].values)\n",
     "    \n",
@@ -204,11 +244,14 @@
     "    # merge astral\n",
     "    x_merged = pd.merge(x, astral_df, left_on='Date', right_index=True)\n",
     "    \n",
+    "    # merge elevatoin\n",
+    "    x_merged = pd.merge(x_merged, elevation, how='left', left_on=['Latitude', 'Longitude'], right_on=['Latitude', 'Longitude'])\n",
+    "    \n",
     "    # merge usgs\n",
-    "    x_merged = pd.merge(x_merged, usgs_df, left_on='Date', right_index=True)\n",
+    "    x_merged = pd.merge(x_merged, usgs_days, left_on='Date', right_index=True)\n",
     "    \n",
     "    # merge weather\n",
-    "    x_merged = pd.merge(x_merged, weather_merged, left_on='Date', right_index=True)\n",
+    "    x_merged = pd.merge(x_merged, weather_days, left_on='Date', right_index=True)\n",
     "    x_merged.drop('Date', axis=1, inplace=True)\n",
     "    \n",
     "    return x_merged"
@@ -225,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -239,9 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -249,6 +292,37 @@
     "X_train.to_csv('../working/train_f.csv')\n",
     "X_test.to_csv('../working/test_f.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['41.891118' '-87.654491' '181.7394104003906']]\n",
+      "['41.891118' '-87.654491']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll = X_train.iloc[6][['Latitude', 'Longitude']].values\n",
+    "print elevation[elevation.Latitude==ll[0]].values\n",
+    "print ll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
