--- a/src/data_process.ipynb
+++ b/src/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
     "weather_merged.drop(weather_merged.filter(regex='Station').columns, axis=1, inplace=True)\n",
     "\n",
     "# add weather by days\n",
-    "days = [0, 1, 3, 7, 14]\n",
+    "days = range(21)\n",
     "weather_days = pd.DataFrame(index=weather_merged.index)\n",
     "for i in days:\n",
     "    weather_days = pd.merge(weather_days, weather_merged.shift(i), left_index=True, right_index=True, suffixes=['', '_d' + str(i)])"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
     "usgs_df.fillna(0, inplace=True)\n",
     "\n",
     "# add usgs data by days\n",
-    "days = [0, 1, 3, 7, 14]\n",
+    "days = range(21)\n",
     "usgs_days = pd.DataFrame(index=weather_merged.index)\n",
     "for i in days:\n",
     "    usgs_days = pd.merge(usgs_days, usgs_df.shift(i), left_index=True, right_index=True, suffixes=['', '_d' + str(i)])"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -259,16 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +273,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 154,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     1\n",
+      "1     1\n",
+      "2     1\n",
+      "3     1\n",
+      "4     4\n",
+      "5     2\n",
+      "6     1\n",
+      "7     1\n",
+      "8     2\n",
+      "9     1\n",
+      "10    1\n",
+      "11    2\n",
+      "12    3\n",
+      "13    1\n",
+      "14    1\n",
+      "...\n",
+      "10491    11\n",
+      "10492     1\n",
+      "10493     3\n",
+      "10494     7\n",
+      "10495     1\n",
+      "10496     3\n",
+      "10497     8\n",
+      "10498    13\n",
+      "10499     5\n",
+      "10500     3\n",
+      "10501     6\n",
+      "10502     5\n",
+      "10503     1\n",
+      "10504     5\n",
+      "10505     1\n",
+      "Name: NumMosquitos, Length: 10506, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add extra data\n",
+    "X_train['NumMosquitos'] = train['NumMosquitos']\n",
+    "print train['NumMosquitos']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
