--- a/src/data_process.ipynb
+++ b/src/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -12,14 +12,6 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pylab import has clobbered these variables: ['datetime', 'test']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -38,12 +30,12 @@
     "from sklearn.preprocessing import LabelEncoder, LabelBinarizer\n",
     "#from itertools import chain\n",
     "\n",
-    "from astral import Astral"
+    "#from astral import Astral"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +49,7 @@
     "\n",
     "weather = pd.read_csv('../input/weather.csv', index_col=1, parse_dates=['Date'], date_parser=date_parser)[['Station', 'Tmax', 'Tmin', 'Tavg', 'DewPoint', 'WetBulb', 'Cool', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']]\n",
     "\n",
-    "elevation = pd.read_csv('../input/elevation.csv', dtype=str, index_col=0)"
+    "#elevation = pd.read_csv('../input/elevation.csv', dtype=str, index_col=0)"
    ]
   },
   {
@@ -70,12 +62,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 141,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
     "# import usgs data\n",
     "usgs_04087440 = pd.read_table('../input/usgs_04087440.txt', comment='#', index_col=2, parse_dates=['datetime'], date_parser=date_parser)[['01_00065_00003']]\n",
@@ -87,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -109,12 +99,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 143,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
     "# usgs processing\n",
     "usgs_df = pd.DataFrame(index=weather_merged.index, columns=['USGS04087440', 'USGS05536105', 'USGS05536118', 'USGS05536121', 'USGS05536123'])\n",
@@ -133,12 +121,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 144,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
     "# astral\n",
     "city_name = 'Chicago'\n",
@@ -161,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -242,16 +228,16 @@
     "    #x['Species'] = species_le.transform(data['Species'].values)\n",
     "    \n",
     "    # merge astral\n",
-    "    x_merged = pd.merge(x, astral_df, left_on='Date', right_index=True)\n",
+    "    #x_merged = pd.merge(x, astral_df, left_on='Date', right_index=True)\n",
     "    \n",
     "    # merge elevatoin\n",
-    "    x_merged = pd.merge(x_merged, elevation, how='left', left_on=['Latitude', 'Longitude'], right_on=['Latitude', 'Longitude'])\n",
+    "    #x_merged = pd.merge(x_merged, elevation, how='left', left_on=['Latitude', 'Longitude'], right_on=['Latitude', 'Longitude'])\n",
     "    \n",
     "    # merge usgs\n",
-    "    x_merged = pd.merge(x_merged, usgs_days, left_on='Date', right_index=True)\n",
+    "    #x_merged = pd.merge(x_merged, usgs_days, left_on='Date', right_index=True)\n",
     "    \n",
     "    # merge weather\n",
-    "    x_merged = pd.merge(x_merged, weather_days, left_on='Date', right_index=True)\n",
+    "    x_merged = pd.merge(x, weather_days, left_on='Date', right_index=True)\n",
     "    x_merged.drop('Date', axis=1, inplace=True)\n",
     "    \n",
     "    return x_merged"
@@ -259,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -267,65 +253,27 @@
    "source": [
     "# get train and test data\n",
     "X_train = gen_features(train)\n",
+    "X_train['NumMosquitos'] = train['NumMosquitos']\n",
     "X_train['WnvPresent'] = train['WnvPresent']\n",
     "X_test = gen_features(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     1\n",
-      "1     1\n",
-      "2     1\n",
-      "3     1\n",
-      "4     4\n",
-      "5     2\n",
-      "6     1\n",
-      "7     1\n",
-      "8     2\n",
-      "9     1\n",
-      "10    1\n",
-      "11    2\n",
-      "12    3\n",
-      "13    1\n",
-      "14    1\n",
-      "...\n",
-      "10491    11\n",
-      "10492     1\n",
-      "10493     3\n",
-      "10494     7\n",
-      "10495     1\n",
-      "10496     3\n",
-      "10497     8\n",
-      "10498    13\n",
-      "10499     5\n",
-      "10500     3\n",
-      "10501     6\n",
-      "10502     5\n",
-      "10503     1\n",
-      "10504     5\n",
-      "10505     1\n",
-      "Name: NumMosquitos, Length: 10506, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# add extra data\n",
-    "X_train['NumMosquitos'] = train['NumMosquitos']\n",
-    "print train['NumMosquitos']"
+    "#X_train['NumMosquitos'] = train['NumMosquitos']\n",
+    "#print train['NumMosquitos']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -338,25 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['41.891118' '-87.654491' '181.7394104003906']]\n",
-      "['41.891118' '-87.654491']\n"
-     ]
-    }
-   ],
-   "source": [
-    "ll = X_train.iloc[6][['Latitude', 'Longitude']].values\n",
-    "print elevation[elevation.Latitude==ll[0]].values\n",
-    "print ll"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
