--- a/src/data_process.ipynb
+++ b/src/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -12,6 +12,14 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: pylab import has clobbered these variables: ['datetime', 'test']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -89,13 +97,30 @@
     "# replace letters, combine stations\n",
     "weather.replace('[a-zA-Z]', 0, regex=True, inplace=True)\n",
     "weather_merged = pd.merge(weather[weather.Station == 1], weather[weather.Station == 2], left_index=True, right_index=True, suffixes=['_1', '_2'])\n",
-    "weather_merged.drop(weather_merged.filter(regex='Station').columns, axis=1, inplace=True)\n",
+    "weather_merged.drop(weather_merged.filter(regex='Station').columns, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create weather data\n",
+    "weather_data = pd.DataFrame(index=weather_merged.index)\n",
     "\n",
-    "# add weather by days\n",
-    "days = range(21)\n",
-    "weather_days = pd.DataFrame(index=weather_merged.index)\n",
+    "# add weather for previous days\n",
+    "days = range(5)\n",
     "for i in days:\n",
-    "    weather_days = pd.merge(weather_days, weather_merged.shift(i), left_index=True, right_index=True, suffixes=['', '_d' + str(i)])"
+    "    weather_data = pd.merge(weather_data, weather_merged.shift(i), left_index=True, right_index=True, suffixes=['', '_d' + str(i)])\n",
+    "    \n",
+    "# add weather moving averages\n",
+    "avg = [3, 7, 14, 21]\n",
+    "weather_avg = pd.DataFrame(index=weather_merged.index)\n",
+    "for i in avg:\n",
+    "    weather_data = pd.merge(weather_data, pd.rolling_mean(weather_merged, i), left_index=True, right_index=True, suffixes=['', '_a' + str(i)])"
    ]
   },
   {
@@ -147,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -193,15 +218,26 @@
      "text": [
       "(10506, 12)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2007"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print train.shape"
+    "print train.shape\n",
+    "train.iloc[0]['Date'].year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -214,9 +250,11 @@
     "    \n",
     "    # add date\n",
     "    x['Date'] = data['Date']\n",
-    "    x['DayOfWeek'] = data.Date.apply(lambda x: x.weekday())\n",
-    "    x['DayOfMonth'] = data.Date.apply(lambda x: x.day)\n",
-    "    x['DayOfYear'] = data.Date.apply(lambda x: x.timetuple().tm_yday)\n",
+    "    #x['DayOfWeek'] = data.Date.apply(lambda x: x.weekday())\n",
+    "    #x['DayOfMonth'] = data.Date.apply(lambda x: x.day)\n",
+    "    #x['DayOfYear'] = data.Date.apply(lambda x: x.timetuple().tm_yday)\n",
+    "    x['Week'] = data['Date'].apply(lambda d: d.isocalendar()[1])\n",
+    "    x['Year'] = data['Date'].apply(lambda d: d.year)\n",
     "    \n",
     "    # add location\n",
     "    x[['Latitude', 'Longitude']] = data[['Latitude', 'Longitude']]\n",
@@ -237,15 +275,17 @@
     "    #x_merged = pd.merge(x_merged, usgs_days, left_on='Date', right_index=True)\n",
     "    \n",
     "    # merge weather\n",
-    "    x_merged = pd.merge(x, weather_days, left_on='Date', right_index=True)\n",
-    "    x_merged.drop('Date', axis=1, inplace=True)\n",
+    "    x = pd.merge(x, weather_data, left_on='Date', right_index=True)\n",
     "    \n",
-    "    return x_merged"
+    "    # drop date\n",
+    "    x.drop('Date', axis=1, inplace=True)\n",
+    "    \n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
