--- a/src/data_process.ipynb
+++ b/src/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -12,14 +12,6 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pylab import has clobbered these variables: ['datetime', 'test']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +217,7 @@
        "2007"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -300,15 +292,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'astype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-37ca4c1e7120>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mXd_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgen_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#print X_train['NumMosquitos'].astype(int).sum()/X_train['NumMosquitos'].count()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'NumMosquitos'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'astype'"
+     ]
+    }
+   ],
    "source": [
-    "# add extra data\n",
-    "#X_train['NumMosquitos'] = train['NumMosquitos']\n",
-    "#print train['NumMosquitos']"
+    "Xd_train = gen_data(X_train, 10)\n",
+    "#print X_train['NumMosquitos'].astype(int).sum()/X_train['NumMosquitos'].count()"
    ]
   },
   {
@@ -323,6 +335,15 @@
     "X_train.to_csv('../working/train_f.csv')\n",
     "X_test.to_csv('../working/test_f.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
